@@ -1,3 +1,6 @@
+2008-02-20  Stephen Sinclair <radarsat1@gmail.com>
+	* Added lo_bundle_free_messages() to free a bundle and the messages it points to. (Kentaro Fukuchi)
+
 2008-01-27  Stephen Sinclair <radarsat1@gmail.com>
 	* Fix for lo_message_add(), wrong argument order for lo_message_add_varargs_internal(). (Dave Robillard)
 	* Added test case for lo_message_add().
